# cut-text-file

./: .gitignore  Cargo.toml
src/: main.rs
src/config/: config.rs  mod.rs
src/model/: book.rs  mod.rs
src/processor/: mod.rs  processor.rs
src/watcher/: mod.rs  watcher.rs
