[package]
name = "xreader_cut_file"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.23.1", features = ["tokio-comp"]}
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14.1"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.3.2"
notify = "5.0.0"
log = "0.4.14"
env_logger = "0.10"
uuid = {version= "0.8.1", features=["v4","serde"]}
futures = "0.3"